# flask_cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.package_name }}/: .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Procfile  README.md  heroku.yml  noxfile.py  pylintrc  pyproject.toml  setup.cfg
{{ cookiecutter.package_name }}/.github/workflows/: sessions.yml
{{ cookiecutter.package_name }}/docker/: api-Dockerfile  docker-compose.yaml
{{ cookiecutter.package_name }}/docker-compose/: api-entrypoint.sh  docker-compose.yaml
{{ cookiecutter.package_name }}/heroku/: heroku-entrypoint.sh
{{ cookiecutter.package_name }}/tests/: test_api.py  test_sample.py
{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/: api.py  app.py  manage.py  utils.py
{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/namespaces/default/: namespace.py
{{ cookiecutter.package_name }}/{{ cookiecutter.project_name }}/: api.py  app.py  cfg.py  manage.py  settings_sample.ini
